# tnc-edge-service

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  About_ELOG_Data.md  README.md  alembic.ini  archive_reencode.py  box_reupload.py  coco_labels_example.json  coco_labels_example_oneclump.json  coco_labels_example_twoclumps.json  copy_enc_copy.py  cron_target.py  edge_http.py  efultz-read-vectors-write-cloudwatch-metrics.py  gps_fetch.py  gps_simulator.py  gps_simulator_outside.py  main_schedule.py  port_locations.sql  pyproject.toml  reencode.py  requirements.txt  run_aifish.py  run_ondeck.py  s3_uploader.py  seed_db.py  test_track.py  tnc-edge.ipynb  tnc_gps_speed.ipynb  vector_schedule.py  video_fetch.py
.github/workflows/: README.md  deploy-to-jetson.yml  style-checks.yaml  test-coverage.yaml
api/: README.md  __init__.py  deckhand.py
config/: .gitignore  README.md  defaults.py
dbdumps/: 2023-04-03T23:46:31Z.pgdump  README.md  create_dump.sh  reset_schema.sh  restore_dump.sh  seed_db.py
hdcopy/: main.sh  main2.sh
migrations/: README.md  env.py
migrations/versions/: 04eaff9bcc55_.py  17911f3ffb3b_new_vector_rows_1.py  1d1b10e054af_add_timezones.py  1d99d3d6427d_new_boatschedule_table.py  47ff3fca73a4_vector_schedulestring.py  495235ece5f0_ondeckdata_unique.py  58dd42108a22_new_vid_file_table.py  5e4898954923_ondeckdata_table.py  5fdb864a1bbb_refactor_aifish.py  643148911953_deckhand_json_views.py  677a2f2884e1_s3uploadstable.py  81b92a299311_gps_data_types.py  8304966281aa_reencode_files.py  90960f3ecc5e_secondrev_test.py  97b633de0899_video_cam_name.py  b2f76c38a4a0_deckhand_gaps_score.py  b78dce0f5492_ondeck_json_columns.py  ba08d4e11cc7_ondeckdata_more_data_columns.py  bbe04841c70d_port_departures_view.py  d974c1aea745_elog_gaps_score_update.py  e718ddd7c0bd_add_track_table.py  ecb326942445_starttime_on_videos.py  f48359cf7456_ondeckdata_status.py  f835aa8c569a_second.py  f9dbf07180af_test_from_to_columns.py  fdfd9e708602_add_elog_timegap_vector_row.py
misc/: README.md  costarica_intl_borders_guestimate.json  gpsdata_scratchpad.sql  scratchpad_gst-launch_transcoding.sh  vector_data_as_cloudwatch_metrics_experiment.py
misc/data/: cr_sunrise_sunset.csv  port_locations.sql
misc/data/sets_hauls_csv_for_bv/: brancol_elog_timelocation_Nov7.csv  brancol_sets_hauls_february.csv  brancol_sets_hauls_march.csv  saint_patrick_sets_hauls_february.csv  saint_patrick_sets_hauls_march.csv  stpatrick_elog_timelocation_Nov7.csv
misc/data/thalos_uptime_logs/: sessions_brancol.csv  sessions_manudo.csv
model/: README.md  __init__.py  aifishdata.py  boatschedule.py  deckhandevent.py  deckhandeventraw.py  deckhandeventview.py  fishaidata.py  gpsdata.py  internetdata.py  ondeckdata.py  riskvector.py  test copy.py  test.py  track.py  videofiles.py
notebooks/: README.md  catchcount_vector.ipynb  edge_integration_charts.ipynb  elog_analysis.ipynb  key_event_detection.ipynb  timeseries_classifier_model.ipynb  tnc-edge-catch-plots.ipynb  tnc-edge-data-integration.ipynb  tnc-edge-gps-speed.ipynb  tnc-edge-network-uptime.ipynb  tnc-edge-ondeck-ops-df.ipynb  tnc-edge-system-uptime.ipynb  tnc-edge-vectorprocessing.ipynb  tnc_edge_bv_excel_parsing.ipynb
notebooks/data/: integration_state_evaluations_videocopy_ai.pickle  reviewer_notes_6-20.csv  sessions_saintpatrick.csv  vector_id_6_rerun_brancol.csv  vector_id_6_rerun_stpatrick.csv
notebooks/helper_functions/: aggregations.py  data_readers.py
notebooks/models/: rnn_plus_haul_classifier.pth
scripts/: README.md  adduser_aifish.sh  adduser_ondeck.sh  app-install.sh  edge_authorized_keys.txt  gh_setup.sh  install.sh  netplan-autoswitcher.sh  ondeck_authorized_keys.txt  purge-video.sh  system-install.sh  vpn-install.sh
scripts/box_dot_com/: box_reupload.done  box_reupload.log.1  box_reupload.py  box_reupload.sh  box_reupload2.done  box_reupload2.sh  box_reupload3.done  boxapiexamples.sh  brancol_box_cam1_filedatetimes.txt  brancol_box_cam2_filedatetimes.txt  stpatrick_box_cam1_filedatetimes.txt  stpatrick_box_cam2_filedatetimes.txt
scripts/video_bulk_copy/: local_to_s3_upload.sh  local_to_usbstick.sh  thalos_all_files_psql_to_usbstick.sh  thalos_specific_files_to_usbstick.sh  usbdrive_ensure_encrypted.sh
tests/: README.md  ondeck_json_to_tracks.py
tests/data/: 20231205T212500Z_cam1_ondeck.json
tests/onetimetests/: test.py  test2.py  test3.py  test4.py
vector/: README.md  __init__.py  basevector.py  catchcountA.py  catchcountB.py  elogtimegaps.py  equipment_outage_agg.py  fish_ai.py  gps.py  internet.py  ondeck.py  tegrastats.py  thalos_mount.py  thalos_vids_exist.py
